k8s/frontend/frontend-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: frontend-tier
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: fawry-frontend
